<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="horizontal"
    android:weightSum="4"
    tools:context="edu.loyola.puzzlemate.PuzzleSolveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageButton"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceOneClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/androidpictwo" />

                <ImageView
                    android:id="@+id/imageButton2"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceTwoClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toEndOf="@+id/imageButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/androidpictwo" />

                <ImageView
                    android:id="@+id/imageButton3"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceThreeClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toEndOf="@+id/imageButton2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/androidpictwo" />

                <ImageView
                    android:id="@+id/imageButton4"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceFourClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toEndOf="@+id/imageButton3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/androidpictwo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageButton5"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:onClick="pieceFiveClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton"
                    app:srcCompat="@mipmap/androidpictwo" />

                <ImageView
                    android:id="@+id/imageButton6"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceSixClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toEndOf="@+id/imageButton5"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton2"
                    app:srcCompat="@mipmap/androidpictwo" />

                <ImageView
                    android:id="@+id/imageButton7"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceSevenClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toEndOf="@+id/imageButton6"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton3"
                    app:srcCompat="@mipmap/androidpictwo" />

                <ImageView
                    android:id="@+id/imageButton8"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceEightClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toEndOf="@+id/imageButton7"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton4"
                    app:srcCompat="@mipmap/androidpictwo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageButton9"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceNineClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton5"
                    app:srcCompat="@mipmap/androidpictwo" />

                <ImageView
                    android:id="@+id/imageButton10"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceTenClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toEndOf="@+id/imageButton9"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton6"
                    app:srcCompat="@mipmap/androidpictwo" />

                <ImageView
                    android:id="@+id/imageButton11"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceElevenClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toEndOf="@+id/imageButton10"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton7"
                    app:srcCompat="@mipmap/androidpictwo" />

                <ImageView
                    android:id="@+id/imageButton12"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceTweleveClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toEndOf="@+id/imageButton11"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton8"
                    app:srcCompat="@mipmap/androidpictwo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageButton13"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:onClick="pieceThirteenClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton9"
                    app:srcCompat="@mipmap/androidpictwo" />

                <ImageView
                    android:id="@+id/imageButton14"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceFourteenClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toEndOf="@+id/imageButton13"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton10"
                    app:srcCompat="@mipmap/androidpictwo" />

                <ImageView
                    android:id="@+id/imageButton15"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceFifteenClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toEndOf="@+id/imageButton14"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton11"
                    app:srcCompat="@mipmap/androidpictwo" />

                <ImageView
                    android:id="@+id/imageButton16"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pieceSixteenClickHandler"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toEndOf="@+id/imageButton15"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton12"
                    app:srcCompat="@mipmap/androidpictwo" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/shuffle"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:layout_weight="1"
            android:onClick="shuffleButtonClickHandler"
            android:text="Shuffle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton15" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/androidpictwo" />

</LinearLayout>

